Updated README, added comment overflow prevention option

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@
     background-color:#FFFFFF;
     border:1px solid #BBBBBB;
     padding:2px;
+    margin-right:5px;
 }
 
 
